# tmap

./: LICENSE  README.md  pyproject.toml
.github/workflows/: CI.yaml
examples/: fit.ipynb
src/tmap/: __init__.py  base.py  flow.py  layout.py  simulate.py  temporal.py  utils.py
src/tmap/alignment/: __init__.py  dtw.py  masking.py  ot.py
tests/: test_fit.py
