[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
    "setuptools-scm",
    "wheel",
]

[project]
authors = [
    {email = "code@arlowe.co.uk", name = "Alan R. Lowe"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: napari",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "dtaidistance",
    "jax",
    "matplotlib",
    "numpy",
    "pandas",
    "scikit-image",
    "scikit-learn",
    "scipy",
    "tqdm",
    "umap-learn",
]
description = "Temporal UMAP"
dynamic = [
    "version",
]
name = "tmap"
readme = "README.md"
requires-python = ">=3.8"
license.file = "LICENCE.md"
urls.homepage = "https://github.com/quantumjot/tmap"
